--- a/package.json
+++ b/package.json
@@ -3,6 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
+    "moment": "^2.29.1",
+    "react": "^17.0.1",
+    "react-apollo": "^3.1.5",
+    "react-dom": "^17.0.1",
+    "react-hooks": "^1.0.1"
+  },
+  "devDependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@graphql-codegen/cli": "^1.15.2",
+    "@graphql-codegen/fragment-matcher": "^2.0.0",
+    "@graphql-codegen/introspection": "^1.15.2",
+    "@graphql-codegen/typescript": "^1.15.2",
+    "@graphql-codegen/typescript-graphql-files-modules": "^1.15.2",
+    "@graphql-codegen/typescript-operations": "^1.15.2",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,17 +31,18 @@
     "@types/node": "^12.19.3",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@types/source-map-support": "^0.5.3",
+    "react-app-rewired": "^2.1.6",
     "react-scripts": "4.0.0",
+    "source-map-support": "^0.5.16",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "types-generate": "graphql-codegen",
+    "start": "graphql-codegen && react-app-rewired start",
+    "build": "graphql-codegen && react-app-rewired build",
+    "test": "graphql-codegen && react-app-rewired test"
   },
   "eslintConfig": {
     "extends": [
