--- a/package.json
+++ b/package.json
@@ -14,16 +14,24 @@
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
-    "react-hooks": "^1.0.1"
+    "react-hooks": "^1.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@babel/core": "^7.12.3",
     "@graphql-codegen/cli": "^1.15.2",
     "@graphql-codegen/fragment-matcher": "^2.0.0",
     "@graphql-codegen/introspection": "^1.15.2",
     "@graphql-codegen/typescript": "^1.15.2",
     "@graphql-codegen/typescript-graphql-files-modules": "^1.15.2",
     "@graphql-codegen/typescript-operations": "^1.15.2",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-essentials": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/node-logger": "^6.0.28",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.28",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -32,7 +40,10 @@
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@types/source-map-support": "^0.5.3",
+    "@types/styled-components": "^5.1.4",
+    "babel-loader": "^8.1.0",
     "react-app-rewired": "^2.1.6",
+    "react-is": "^17.0.1",
     "react-scripts": "4.0.0",
     "source-map-support": "^0.5.16",
     "typescript": "^4.0.5",
@@ -42,7 +53,9 @@
     "types-generate": "graphql-codegen",
     "start": "graphql-codegen && react-app-rewired start",
     "build": "graphql-codegen && react-app-rewired build",
-    "test": "graphql-codegen && react-app-rewired test"
+    "test": "graphql-codegen && react-app-rewired test",
+    "storybook": "start-storybook -p 6006 -s public --no-dll",
+    "build-storybook": "build-storybook -s public --no-dll"
   },
   "eslintConfig": {
     "extends": [
